--- a/HedgeModManager/Themes/DarkTheme.xaml
+++ b/HedgeModManager/Themes/DarkTheme.xaml
@@ -14,6 +14,7 @@
     <Color           x:Key="HMM.Window.BackgroundColor1" A="255" R="51" G="51" B="55"/>
     <SolidColorBrush x:Key="HMM.Window.BackgroundBrush1" Color="{DynamicResource HMM.Window.BackgroundColor1}"/>
     <SolidColorBrush x:Key="HMM.Window.BackgroundBrush2" Color="#FF3F3F41"/>
+    <SolidColorBrush x:Key="HMM.Window.BackgroundBrush3" Color="#FF323235"/>
     <SolidColorBrush x:Key="HMM.Window.ForegroundBrush" Color="#FFFFFFFF"/>
     <SolidColorBrush x:Key="HMM.Window.BorderBrush" Color="#FF3F3F46"/>
     <SolidColorBrush x:Key="HMM.Button.BackgroundBrush" Color="#FF3F3F46"/>
