--- a/HedgeModManager/Languages/en-US.xaml
+++ b/HedgeModManager/Languages/en-US.xaml
@@ -260,6 +260,7 @@
     <system:String x:Key="GameSonicColorsUltimate">Sonic Colors: Ultimate</system:String>
     <system:String x:Key="GameSonicOrigins">Sonic Origins</system:String>
     <system:String x:Key="GameSonicFrontiers">Sonic Frontiers</system:String>
+    <system:String x:Key="GameSonicXShadowGenerations">SONIC X SHADOW GENERATIONS</system:String>
     <system:String x:Key="GameNoGame">No Game Detected!</system:String>
     <system:String x:Key="GameAddGame">Add Game</system:String>
     <system:String x:Key="LauncherSteam">Steam</system:String>
