Support for Shadow Generations (#935)
* Preparation for SONIC X SHADOW GENERATIONS [no ci]

* Add custom mod folder support

* Add remove game button

* Added more game info for SXSG

* Changed SXSG names and position

* Hide Sonic Generations (2024)

* Update HMM code URLs

* Updated HE2ML to 1.3.0

---------

Co-authored-by: Michael <15317421+ActualMandM@users.noreply.github.com>
Co-authored-by: SuperSonic16 <25761885+thesupersonic16@users.noreply.github.com>

--- a/HedgeModManager/Languages/en-US.xaml
+++ b/HedgeModManager/Languages/en-US.xaml
@@ -101,6 +101,7 @@
     <system:String x:Key="SettingsUIEnableDebug"    >Enable debug console</system:String>
     <system:String x:Key="SettingsUIEnableSRedir"   >Redirect default save file</system:String>
     <system:String x:Key="SettingsUIUseLauncher"    >Use game launcher</system:String>
+    <system:String x:Key="SettingsUIRemoveGame"     >Remove Game</system:String>
     <system:String x:Key="SettingsUILabelLoaders"   >Loaders:</system:String>
     <system:String x:Key="SettingsUILabelGame"      >Game:</system:String>
     <system:String x:Key="SettingsUILabelProfile"   >Profile:</system:String>
@@ -254,7 +255,7 @@
     <system:String x:Key="ThemeLight" >Light</system:String>
 
     <!-- Games -->
-    <system:String x:Key="GameSonicGenerations">Sonic Generations</system:String>
+    <system:String x:Key="GameSonicGenerations">Sonic Generations (2011)</system:String>
     <system:String x:Key="GameSonicLostWorld">Sonic Lost World</system:String>
     <system:String x:Key="GameSonicForces">Sonic Forces</system:String>
     <system:String x:Key="GamePuyoPuyoTetris2">Puyo Puyo Tetris 2</system:String>
@@ -262,6 +263,8 @@
     <system:String x:Key="GameSonicColorsUltimate">Sonic Colors: Ultimate</system:String>
     <system:String x:Key="GameSonicOrigins">Sonic Origins</system:String>
     <system:String x:Key="GameSonicFrontiers">Sonic Frontiers</system:String>
+    <system:String x:Key="GameSonicGenerations2024">Sonic Generations (2024)</system:String>
+    <system:String x:Key="GameSonicXShadowGenerations">Shadow Generations</system:String>
     <system:String x:Key="GameNoGame">No Game Detected!</system:String>
     <system:String x:Key="GameAddGame">Add Game</system:String>
     <system:String x:Key="LauncherSteam">Steam</system:String>
