--- a/HedgeModManager/Languages/ko-KR.xaml
+++ b/HedgeModManager/Languages/ko-KR.xaml
@@ -247,7 +247,7 @@
     <system:String x:Key="ThemeLight" >라이트</system:String>
 
     <!-- Games -->
-    <system:String x:Key="GameSonicGenerations">소닉 제네레이션즈</system:String>
+    <system:String x:Key="GameSonicGenerations">소닉 제네레이션즈 (2011)</system:String>
     <system:String x:Key="GameSonicLostWorld">소닉 로스트 월드</system:String>
     <system:String x:Key="GameSonicForces">소닉 포시즈</system:String>
     <system:String x:Key="GamePuyoPuyoTetris2">뿌요뿌요 테트리스 2</system:String>
@@ -255,7 +255,8 @@
     <system:String x:Key="GameSonicColorsUltimate">소닉 컬러즈: 얼티밋</system:String>
     <system:String x:Key="GameSonicOrigins">소닉 오리진스</system:String>
     <system:String x:Key="GameSonicFrontiers">소닉 프론티어</system:String>
-    <system:String x:Key="GameSonicXShadowGenerations">소닉×섀도우 제너레이션즈</system:String>
+    <system:String x:Key="GameSonicGenerations2024">소닉 제네레이션즈 (2024)</system:String>
+    <system:String x:Key="GameShadowGenerations">섀도우 제너레이션즈</system:String>
     <system:String x:Key="GameNoGame">감지된 게임 없음!</system:String>
     <system:String x:Key="LauncherSteam">Steam</system:String>
     <system:String x:Key="LauncherEpic">Epic Games</system:String>
