--- a/HedgeModManager/Languages/zh-TW.xaml
+++ b/HedgeModManager/Languages/zh-TW.xaml
@@ -241,7 +241,7 @@
     <system:String x:Key="ThemeLight" >明亮</system:String>
 
     <!-- Games -->
-    <system:String x:Key="GameSonicGenerations">索尼克 世代</system:String>
+    <system:String x:Key="GameSonicGenerations">索尼克 世代 (2011)</system:String>
     <system:String x:Key="GameSonicLostWorld">索尼克 失落的世界</system:String>
     <system:String x:Key="GameSonicForces">索尼克 武力</system:String>
     <system:String x:Key="GamePuyoPuyoTetris2">魔法氣泡 特趣思 俄羅斯方塊 2</system:String>
@@ -249,7 +249,8 @@
     <system:String x:Key="GameSonicColorsUltimate">索尼克 繽紛色彩 究極版</system:String>
     <system:String x:Key="GameSonicOrigins">索尼克 起源</system:String>
     <system:String x:Key="GameSonicFrontiers">索尼克 未知邊境</system:String>
-    <system:String x:Key="GameSonicXShadowGenerations">索尼克×夏特 世代重啟</system:String>
+    <system:String x:Key="GameSonicGenerations2024">索尼克 世代 (2024)</system:String>
+    <system:String x:Key="GameShadowGenerations">夏特 世代重啟</system:String>
     <system:String x:Key="GameNoGame">找不到遊戲</system:String>
     <system:String x:Key="LauncherSteam">Steam</system:String>
     <system:String x:Key="LauncherEpic">Epic Games</system:String>
